--- a/index.css
+++ b/index.css
@@ -29,8 +29,8 @@ nav ul li a {
     text-decoration: none;
 }
 
-nav ul li a:hover {
-    text-decoration: underline;
+nav ul li a.active {
+    color: red;
 }
 
 /* Main Content Styles */
