--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -8,12 +10,61 @@ body {
 
 /* Header Styles */
 header {
-    background-color: #333;
-    color: #fff;
+    color: black;
     padding: 1rem 0;
     text-align: center;
+    /* box-shadow: 0px 1px 10px black; */
 }
 
+
+nav ul li a.active {
+    color: red;
+}
+
+.dropdown {
+    display: inline-block;
+}
+
+.dropdown .dropbtn {
+    font-size: 18px;
+    border: none;
+    outline: none;
+    color: black;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+nav {
+    overflow: hidden;
+
+}
 nav ul {
     list-style: none;
     padding: 0;
@@ -25,7 +76,8 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    font-size: 18px;
+    color: black;
     text-decoration: none;
 }
 
@@ -33,14 +85,9 @@ nav ul li a.active {
     color: red;
 }
 
-/* Main Content Styles */
 main {
-    padding: 20px;
-    padding-bottom: 60px; 
-}
+    background-color: rgb(233, 233, 233);
 
-section {
-    margin-bottom: 40px;
 }
 
 h2 {
