--- a/fitnessVideos.css
+++ b/fitnessVideos.css
@@ -148,3 +148,39 @@ footer {
     width: 100%;
     bottom: 0;
 }
+
+
+search-filter {
+    display: flex;
+    justify-content: space-between;
+}
+
+.video-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.video-item {
+    flex: 1 1 calc(33.333% - 20px); /* Adjusts to 3 items per row with space in between */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+    height: 400px;
+}
+
+.video-item:hover {
+    transform: scale(1.01);
+}
+
+iframe {
+    width: 100%;
+    height: 350px;
+    border-radius: 5px;
+}
+
+#search-button {
+    margin-bottom: 20px;
+}
